--- a/src/dev/styles/base/_variable.scss
+++ b/src/dev/styles/base/_variable.scss
@@ -1,3 +1,5 @@
+@use '../mixin' as mixin;
+
 //  変数
 // =============================
 
@@ -17,6 +19,7 @@ $base_light: #fff;
 $base_dark: #999;
 $base_light_dark: #444;
 $base_light_dark2: #222;
+$base_light_dark3: #aaa;
 $base_black: #111;
 
 // font-color
@@ -32,3 +35,11 @@ $background_light_dark_color: $base_light_dark2;
 // border-color
 $border_base_color: $base_light;
 $border_dark_color: #333;
+
+%block_margin {
+    margin-top: 36px;       
+
+    @include mixin.media(pc) {
+        margin-top: 48px;        
+    }
+}
