--- a/src/dev/styles/common/_utility.scss
+++ b/src/dev/styles/common/_utility.scss
@@ -90,6 +90,6 @@
 
 // JSで操作するクラス
 //=====================================
-.is-close {
-    display: none;
-}
+// .is-close {
+//     display: none;
+// }
